--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "homepage": "https://kurvaakhileshkumar.github.io/react-app",
   "change": "hello world",
+  "new change": "hello world 2",
   "name": "react-app",
   "version": "0.1.0",
   "private": true,
