--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kurvaakhileshkumar.github.io/react-app",
+  "homepage": "https://kurvaakhileshkumar.github.io",
   "name": "react-app",
   "version": "0.1.0",
   "private": true,
