--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "env-cmd": "^10.1.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-calendar": "^4.8.0",
     "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.12",
