--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^13.5.0",
     "dayjs": "^1.11.10",
     "env-cmd": "^10.1.0",
+    "primereact": "^10.3.3",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-calendar": "^4.8.0",
