--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mui/joy": "^5.0.0-beta.24",
     "@mui/material": "^5.15.5",
     "@mui/x-date-pickers": "^6.19.0",
+    "@reduxjs/toolkit": "^2.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -27,6 +28,7 @@
     "react-router": "^6.21.2",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
