--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "@mui/joy": "^5.0.0-beta.24",
     "@mui/material": "^5.15.5",
     "@mui/x-date-pickers": "^6.19.0",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/full-screen": "^3.12.0",
+    "@react-pdf-viewer/page-navigation": "^3.12.0",
+    "@react-pdf-viewer/zoom": "^3.12.0",
     "@reduxjs/toolkit": "^2.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -24,6 +28,7 @@
     "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.12",
+    "react-pdf": "^7.7.0",
     "react-redux": "^9.1.0",
     "react-router": "^6.21.2",
     "react-router-dom": "^6.21.2",
