--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mui/material": "^5.15.5",
     "@mui/x-date-pickers": "^6.19.0",
     "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@react-pdf-viewer/full-screen": "^3.12.0",
     "@react-pdf-viewer/page-navigation": "^3.12.0",
     "@react-pdf-viewer/zoom": "^3.12.0",
